# website-design-eval-recipe

./: .gitignore  README.md  harbor_preinstalled_claude.py  main.py  package-lock.json  package.json  pyproject.toml  work_trial.md
Generator/: __init__.py  cli.py  fake_runtime.py  io.py  manifest.py  models.py  pipeline.py  prompts.py  runtime.py  verification.py
Generator/docs/: claude-sdk-website-generator.md
Generator/tests/: __init__.py  test_io.py  test_manifest.py  test_models.py  test_pipeline.py  test_prompts.py
agent-image/: Dockerfile  build.sh
docs/: animation-evaluation-design.md  candidate-manifest-planning.md  evaluation-consolidation-2026-05-19.md  evaluation-progress-report.md  framework-aware-evaluation.md  harbor-packaging.md  react-vs-html-evaluation-notes.md  reward-curriculum-v0.md  scoring-functions.md  screenshot-capture.md  websight-recipe-notes.md
docs/handoffs/: 2026-05-20-harbor-modal-scale-handoff.md
docs/plans/: 001-manifest-aware-validation-framework.md  002-website-generator.md  003-browser-state-scoring-substrate.md
docs/reports/: README.md  proximal-reward-report.html  task-exhibition-report.html
progress-logs/: ideas.md  log1.md  log1.txt  log2.md  log2.txt  log3.md  log3.txt  log4.md  log5.md
reproductions/claude-attempt-01/: careers.html  contact.html  enterprises.html  governments.html  index.html  schools.html  screenshot-manifest.json  styles.css
research/: related-work.md
scripts/: build_harbor_images.sh  capture-screenshots.mjs  package_harbor_task.py  package_synthetic_dataset.py  profile_metric_runtime.py  rerun_vlm_variability.py  run_full_metrics.py  run_harbor_full_reward.sh  setup_harbor_vm.sh
test-site/: careers.html  contact.html  enterprises.html  governments.html  index.html  schools.html  screenshot-manifest.json  styles.css
verifier-image/: Dockerfile  build.sh  requirements.txt  setup_models.py
website_design_eval/: __init__.py  block_visual.py  candidate_planner.py  cli.py  cssom.py  diagnostics.py  evaluator.py  manifest_generator.py  reward.py  scoring.py  static_server.py  webcode2m.py  webcode2m_bbox.py
(+316 files in other folders)
